Adds transaction synchronization between nodes and some request validation.
