# lib/server/index.js
@@ -4,6 +4,7 @@ const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 const Block = require('../blockchain/block');
 const HTTPError = require('node-http-error');
+const Transaction = require('../blockchain/transaction');
 
 class HttpServer {
     constructor(port, node, blockchain, operator, miner) {
@@ -24,8 +25,9 @@ class HttpServer {
             res.send(lastBlock);
         });
 
-        app.post('/blockchain/blocks/latest', (req, res) => {            
-            node.checkReceivedBlock(Block.fromJson(req.body));
+        app.post('/blockchain/blocks/latest', (req, res) => {
+            let requestBlock = Block.fromJson(req.body);
+            node.checkReceivedBlock(requestBlock);
             res.send();
         });
 
@@ -40,6 +42,23 @@ class HttpServer {
             let blockFound = blockchain.getBlockByIndex(req.params.index);
             if (blockFound == null) throw new HTTPError(404, `Block not found with index '${req.params.index}'`);
             res.send(blockFound);
+        });
+
+        app.get('/blockchain/transactions', (req, res) => {
+            res.send(blockchain.getAllTransactions());
+        });
+
+        app.put('/blockchain/transactions/:id([a-zA-Z0-9]{64})', (req, res) => {
+            let requestTransaction = Transaction.fromJson(req.body);
+            let transactionFound = blockchain.getTransactionById(requestTransaction.id);
+
+            if (transactionFound != null) throw new HTTPError(409, `Transaction '${requestTransaction.id}' already exists`);
+
+            let newTransaction = blockchain.addTransaction(requestTransaction);
+
+            if (newTransaction == null) throw new HTTPError(400, `Wasn't possible to add transaction '${requestTransaction.id}'`);
+            
+            res.send(newTransaction);
         });
 
         app.get('/operator/wallets', (req, res) => {
@@ -64,6 +83,11 @@ class HttpServer {
             // TODO: This should check the rest inputs
             // TODO: Define the correct place to add a transaction and broadcast (maybe an event emitter?)
             let newTransaction = operator.createTransaction(req.params.walletId, req.body.fromAddress, req.body.toAddress, req.body.amount, req.body.changeAddress);
+
+            let transactionFound = blockchain.getTransactionById(newTransaction.id);
+
+            if (transactionFound != null) throw new HTTPError(409, `Transaction '${newTransaction.id}' already exists`);
+
             blockchain.addTransaction(newTransaction);
             console.log(`Transaction added: ${JSON.stringify(newTransaction)}`);
             node.broadcast(node.sendTransaction, newTransaction);
